# cogs

./: .gitignore  CLAUDE.md  CODEOWNERS  Cargo.toml  Dockerfile.cog-batch  MIGRATION.md  README.md
benchmarks/: BENCHMARK_SUMMARY.txt  Cargo.toml  README.md  STRESS_TEST_SUMMARY.md  network_bench.rs
benchmarks/analysis/: coverage-report.html
benchmarks/data/: comprehensive-benchmark-framework.rs  expected-performance-targets.json
benchmarks/reports/: 100_PERCENT_PERFECT_RATING.md  COMPREHENSIVE_BENCHMARK_REPORT.md  COVERAGE_SUMMARY.txt  FINAL_A_PLUS_REPORT.md  ISA_OPCODE_MAPPING.md  bindings-validation.md  broadcast-deadlock-fix.md  code-quality-review.md  compilation-fixes.md  comprehensive-testing.md  coverage-analysis.md  coverage-improvement.md  crypto-benchmarks.md  documentation-analysis.md  extended-isa-multiply-divide.md  extended-isa-shift-rotate.md  final-verilog-compliance.md  fpu-implementation.md  gcm-implementation.md  integration-report.md  memory-analysis.md  network-analysis.md  network-optimization.md  news-implementation.md  performance-report.md  processor-analysis.md  profiling-report.md  regression-report.md  security-audit-summary.txt  security-audit.md  simd-implementation.md  stress-test-report.md  verilog-compliance.md  verilog-validation-matrix.md  verilog-validation.md  xsalsa20-implementation.md
benchmarks/results/: REGRESSION_SUMMARY.txt  benchmark-output.txt  build-issues.json  crypto-performance.json  final-test-results.txt  full-test-results.txt  integration-tests.json  memory-stress-tests.json  network-performance.json  performance-metrics.json  processor-validation.json  regression-tests.json
benchmarks/stress-tests/: Cargo.toml  generate_results.rs  memory_stress_tests.rs  newport_stress_tests.rs  performance_benchmarks.rs  raceway_stress_tests.rs  results.json
benchmarks/v0-appliance-bench/: Cargo.toml  TEST_PLAN.md
benchmarks/v0-appliance-bench/src/: acceptance.rs  coherence.rs  fault.rs  harness.rs  lib.rs  main.rs  metrics.rs  profile.rs  protocol.rs  report.rs  workload.rs
cognitum-sim/: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
cognitum-sim/.cargo/: config.toml
cognitum-sim/.github/workflows/: ci.yml  napi.yml  wasm.yml
cognitum-sim/cognitum-napi/: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
cognitum-sim/cognitum-napi/src/: lib.rs
cognitum-sim/cognitum-napi/test/: index.spec.ts
cognitum-sim/cognitum-raceway/: Cargo.toml
cognitum-sim/cognitum-raceway/benches/: raceway_bench.rs
cognitum-sim/cognitum-raceway/src/: broadcast.rs  column.rs  hub.rs  lib.rs  network.rs  packet.rs  tile.rs
cognitum-sim/cognitum-raceway/tests/: broadcast_tests.rs  packet_tests.rs  performance_tests.rs  routing_tests.rs
cognitum-sim/cognitum-wasm/: .gitignore  Cargo.toml  README.md  package.json
cognitum-sim/cognitum-wasm/src/: lib.rs
cognitum-sim/crates/cognitum/: Cargo.toml  README.md
cognitum-sim/crates/cognitum-api/: Cargo.toml  README.md
cognitum-sim/crates/cognitum-cli/: Cargo.toml  README.md
cognitum-sim/crates/cognitum-coprocessor/: Cargo.toml
cognitum-sim/crates/cognitum-core/: Cargo.toml  README.md
cognitum-sim/crates/cognitum-debug/: Cargo.toml
cognitum-sim/crates/cognitum-io/: Cargo.toml
cognitum-sim/crates/cognitum-license/: Cargo.toml  README.md
cognitum-sim/crates/cognitum-memory/: Cargo.toml
cognitum-sim/crates/cognitum-processor/: Cargo.toml  README.md
cognitum-sim/crates/cognitum-raceway/: Cargo.toml
cognitum-sim/crates/cognitum-security/: Cargo.toml
cognitum-sim/crates/cognitum-sim/: Cargo.toml
cognitum-sim/crates/cognitum-wasm-sim/: Cargo.toml
cognitum-sim/docs/: CONTRIBUTING.md  README.md
cognitum-sim/scripts/: build-all.sh  publish.sh  test-all.sh
crates/agentvm/: Cargo.toml  README.md
crates/agentvm-capability/: Cargo.toml
crates/agentvm-capability/src/: derive.rs  lib.rs  tests.rs  token.rs  validate.rs  wire.rs
crates/agentvm-evidence/: Cargo.toml
crates/agentvm-evidence/src/: bundle.rs  lib.rs  merkle.rs  sign.rs  tests.rs  verify.rs
crates/agentvm-proxy/: Cargo.toml
crates/agentvm-proxy/src/: lib.rs  tests.rs
crates/agentvm-scheduler/: Cargo.toml
crates/agentvm-scheduler/src/: filter.rs  lib.rs  node.rs  score.rs  task.rs  tests.rs
crates/agentvm-test/: Cargo.toml
crates/agentvm-test/src/: lib.rs
crates/agentvm-types/: Cargo.toml
crates/agentvm-types/src/: budget.rs  capability.rs  capsule.rs  error.rs  evidence.rs  lib.rs  tests.rs
crates/agentvm/tests/: integration_tests.rs
crates/cog-sensor-sources/: Cargo.toml
crates/cog-sensor-sources/.claude-flow/: .trend-cache.json
crates/cog-sensor-sources/src/: lib.rs
crates/cognitum-sdk-ruvector/: .gitignore  Cargo.toml  README.md
crates/cognitum-sdk-ruvector/benches/: ruvector_sdk_bench.rs
crates/cognitum-sdk-ruvector/examples/: basic_usage.rs
crates/cognitum-sdk-ruvector/src/: client.rs  config.rs  error.rs  lib.rs  types.rs
crates/energy-harvester/: Cargo.toml
crates/energy-harvester/examples/: sim_7day.rs
crates/energy-harvester/src/: adc.rs  config.rs  duty_cycle.rs  energy_ledger.rs  lib.rs  power_manager.rs  telemetry.rs  wasm_gate.rs
crates/fxnn/: Cargo.toml  README.md
crates/fxnn/benches/: benchmarks.rs
crates/fxnn/examples/: agent_maze.rs  argon_gas.rs  multi_agent.rs  water_box.rs
crates/fxnn/src/: error.rs  lib.rs  simulation.rs
crates/fxnn/src/io/: mod.rs
crates/fxnn/tests/: agency_tests.rs  agent_budget_tests.rs  budget_tests.rs  determinism_tests.rs  governance_tests.rs  integration_tests.proptest-regressions  integration_tests.rs  learning_safety_tests.rs  memory_tests.rs  perception_tests.rs  physics_tests.rs  witness_tests.rs
crates/micro-hnsw-wasm/: Cargo.toml
crates/thermal-brain/: Cargo.toml  README.md
crates/thermal-brain/src/: config.rs  error.rs  lib.rs  types.rs  wasm.rs
examples/ruvector-integration/: Cargo.toml  README.md
examples/ruvector-integration/benchmarks/: comparative_benchmarks.rs
examples/ruvector-integration/src/: distributed_routing.rs  neural_embeddings.rs  vector_search_demo.rs
(+1380 files in other folders)
