[package]
name = "network-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
cognitum-raceway = { path = "../newport-sim/crates/newport-raceway" }
tokio = { version = "1.48", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "network_bench"
path = "network_bench.rs"
