[package]
name = "newport-memory-stress-tests"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "memory_stress_tests"
path = "memory_stress_tests.rs"

[[bin]]
name = "performance_benchmarks"
path = "performance_benchmarks.rs"

[[bin]]
name = "generate_results"
path = "generate_results.rs"

[dependencies]
newport-core = { path = "../../newport-sim/crates/newport-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
proptest = "1.0"
