[package]
name = "v0-appliance-bench"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["rUv.io", "TekStart"]
license = "MIT OR Apache-2.0"
description = "Benchmark and testing harness for the Cognitum v0 Appliance Emulator"

[dependencies]
# Async runtime (tick loop, transport, concurrent tiles)
tokio = { version = "1.35", features = ["full"] }

# Serialization for reports and config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI for standalone benchmark runner
clap = { version = "4.4", features = ["derive"] }

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CRC32 (matching the v0 protocol spec)
crc32fast = "1.3"

# Statistics / histograms
# (The built-in LatencyHistogram is sufficient; hdrhistogram is optional)
# hdrhistogram = "7.5"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bin]]
name = "v0_bench"
path = "src/main.rs"

[[bin]]
name = "v0_acceptance"
path = "src/acceptance.rs"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.bench]
inherits = "release"
debug = true
