[package]
name = "agentvm-proxy"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Capability proxy layer for Agentic VM"
repository = "https://github.com/ruvnet/cognitum"
keywords = ["agentic", "vm", "capability", "proxy", "security"]
categories = ["embedded", "no-std"]

[features]
default = ["std"]
std = ["agentvm-types/std"]
serde = ["agentvm-types/serde"]

[dependencies]
agentvm-types = { path = "../agentvm-types", default-features = false }
hashbrown = { version = "0.14", default-features = false, features = ["ahash"] }
spin = { version = "0.9", default-features = false, features = ["mutex", "rwlock"] }

[dev-dependencies]
