[package]
name = "agentvm-scheduler"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Fabric scheduler for heterogeneous compute tiers in Agentic VM"
repository = "https://github.com/ruvnet/cognitum"
keywords = ["agentic", "vm", "scheduler", "heterogeneous", "edge"]
categories = ["embedded", "algorithms"]

[features]
default = ["std"]
std = ["agentvm-types/std"]
serde = ["agentvm-types/serde"]

[dependencies]
agentvm-types = { path = "../agentvm-types", default-features = false }
hashbrown = { version = "0.14", default-features = false, features = ["ahash"] }

[dev-dependencies]
