[package]
name = "cognitum-sdk-ruvector"
version = "1.0.0"
edition = "2021"
authors = ["Cognitum Team"]
description = "Ruvector SDK for Cognitum chip - vector search and neural routing"
license = "MIT"
keywords = ["cognitum", "ruvector", "vector-search", "neural-routing", "chip"]
categories = ["embedded", "science"]
repository = "https://github.com/cognitum/cognitum"

[lib]
name = "cognitum_sdk_ruvector"
path = "src/lib.rs"

[dependencies]
# Parent cognitum crate
cognitum = { path = "../..", version = "1.0" }

# Async runtime
tokio = { version = "1.48", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Concurrency
parking_lot = "0.12"

# Logging
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.13"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.5"

[features]
default = []
# Enable advanced quantization features
quantization = []
# Enable performance monitoring
metrics = []

[[bench]]
name = "ruvector_sdk_bench"
harness = false
