[package]
name = "cognitum-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Command-line interface for Cognitum ASIC simulator"

[[bin]]
name = "cognitum"
path = "src/main.rs"

[dependencies]
cognitum-core.workspace = true
cognitum-sim.workspace = true
cognitum-debug.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
colored = "2.1"
toml = "0.8"
indicatif = "0.17"
